welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: not found: value surBiscuit
while(!surBiscuit){avance()
       ^